--- a/Dockerfile.unknown
+++ b/Dockerfile.unknown
@@ -12,7 +12,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Expose port
-EXPOSE 5000
+EXPOSE 8000
 
 # Run app
-CMD ["python", "app.py"]
+CMD ["python", "backend.py"]
