--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-# CPU-only PyTorch stack (must be first!)
-torch==2.4.1+cpu     --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.19.1+cpu  --index-url https://download.pytorch.org/whl/cpu
-torchaudio==2.4.1+cpu    --index-url https://download.pytorch.org/whl/cpu
-
-# Core dependencies
 fastapi
 uvicorn
 chromadb
@@ -11,3 +5,4 @@ psycopg2
 sentence-transformers
 pillow
 requests
+python-multipart
