updated rocker and requirement files

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ sentence-transformers
 pillow
 requests
 python-multipart
+aiohttp
+torch --index-url https://download.pytorch.org/whl/cu118
+torchvision --index-url https://download.pytorch.org/whl/cu118
