--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./chroma_db:/app/chroma_db
     network_mode: "host"
+    runtime: nvidia  # Enable NVIDIA runtime for GPU support
 
   backend:
     build: .
@@ -16,6 +17,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    runtime: nvidia  # Enable NVIDIA runtime for GPU support
 
   db:
     image: postgres:17
