modified to reduce docker imager size

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+
 fastapi
-uvicorn
+uvicorn[standard]
 chromadb
-psycopg2
 sentence-transformers
-pillow
+Pillow
 requests
 python-multipart
+aiohttp
+torch==2.3.0+cpu
+torchvision==0.18.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 
